@@ -1,3 +1,7 @@
+drkns 27.11.2016 11:48:40 +0200 - build 4859
+
+1. При смене диска мышью не всегда устанавливался текущий каталог панели.
+
 drkns 26.11.2016 14:11:57 +0200 - build 4858
 
 1. Частичный откат 4853 ради совместимости с W2k.
